--- a/packages/cli/_template/rnc-plugin-kit/package.json
+++ b/packages/cli/_template/rnc-plugin-kit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rnc/plugin-find",
   "version": "0.0.0",
-  "description": "rnc组件",
+  "description": "rnc组件(内置)",
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
