--- a/packages/cli/_template/component-webpack-kit/package.json
+++ b/packages/cli/_template/component-webpack-kit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "component_webpack_template",
   "version": "1.0.0",
-  "description": "webpack开发的组件",
+  "description": "webpack开发的组件(内置)",
   "main": "./lib/index.js",
   "dependencies": {
     "@babel/runtime-corejs2": "^7.0.0-beta.56"
