--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "lerna run --parallel --stream start",
     "build": "lerna run --parallel --stream build",
     "link": "lerna exec --scope @rnc/cli -- tnpm link",
-    "bootstrap": "lerna bootstrap --hoist"
+    "bootstrap": "lerna bootstrap --hoist",
+    "publish": "lerna publish"
   },
   "keywords": [
     "analyze",
