--- a/packages/plugin-compiler-rollup/package.json
+++ b/packages/plugin-compiler-rollup/package.json
@@ -18,5 +18,8 @@
     "chalk": "^1.1.3",
     "rollup": "^0.64.0",
     "webpack-merge": "^4.1.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
