--- a/packages/plugin-compiler-webpack/package.json
+++ b/packages/plugin-compiler-webpack/package.json
@@ -22,5 +22,8 @@
     "webpack-merge": "^4.1.3",
     "webpack-dev-server": "^3.1.4",
     "react-dev-utils": "^5.0.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
