--- a/packages/plugin-env/package.json
+++ b/packages/plugin-env/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
     "@rnc/plugin-core": "^0.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
