--- a/packages/plugin-npm/package.json
+++ b/packages/plugin-npm/package.json
@@ -17,5 +17,8 @@
     "@rnc/plugin-core": "^0.0.0",
     "@rnc/spinner": "^0.0.0",
     "@rnc/shell": "^0.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
