--- a/packages/plugin-type-app/package.json
+++ b/packages/plugin-type-app/package.json
@@ -33,5 +33,8 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
