--- a/packages/plugin-type-component/package.json
+++ b/packages/plugin-type-component/package.json
@@ -36,6 +36,8 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0"
-
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
