--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -17,5 +17,8 @@
     "@rnc/plugin-core": "^0.0.0",
     "shelljs": "^0.8.2",
     "chalk": "^1.1.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
