--- a/packages/spinner/package.json
+++ b/packages/spinner/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
     "ora": "^2.1.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
