--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -17,5 +17,8 @@
     "chalk": "^1.1.3",
     "fallback-port": "^0.1.7",
     "@babel/runtime": "^7.0.0-beta.56"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
