--- a/packages/plugin-compiler-webpack/package.json
+++ b/packages/plugin-compiler-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnc/plugin-compiler-webpack",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "🔍 webpack compiler",
   "license": "MIT",
   "main": "lib/index.js",
@@ -14,14 +14,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
-    "@rnc/plugin-core": "^0.0.0",
-    "@rnc/spinner": "^0.0.0",
+    "@rnc/plugin-core": "^0.0.1",
+    "@rnc/spinner": "^0.0.1",
     "chalk": "^1.1.3",
+    "react-dev-utils": "^5.0.1",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
-    "webpack-merge": "^4.1.3",
     "webpack-dev-server": "^3.1.4",
-    "react-dev-utils": "^5.0.1"
+    "webpack-merge": "^4.1.3"
   },
   "publishConfig": {
     "access": "public"
