--- a/packages/plugin-npm/package.json
+++ b/packages/plugin-npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnc/plugin-npm",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "🔍 npm command",
   "license": "MIT",
   "main": "lib/index.js",
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
-    "@rnc/plugin-core": "^0.0.0",
-    "@rnc/spinner": "^0.0.0",
-    "@rnc/shell": "^0.0.0"
+    "@rnc/plugin-core": "^0.0.1",
+    "@rnc/shell": "^0.0.1",
+    "@rnc/spinner": "^0.0.1"
   },
   "publishConfig": {
     "access": "public"
