--- a/packages/plugin-type-app/package.json
+++ b/packages/plugin-type-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnc/plugin-type-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "🔍 app configuration",
   "license": "MIT",
   "main": "lib/index.js",
@@ -14,25 +14,25 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
-    "@rnc/plugin-core": "^0.0.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "html-webpack-plugin": "^4.0.0-alpha",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "mini-css-extract-plugin": "^0.4.1",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8",
-    "chalk": "^1.1.3",
-    "globby": "^4.1.0",
-    "react-dev-utils": "^5.0.1",
-    "react-hot-loader": "^4.3.3",
+    "@rnc/plugin-core": "^0.0.1",
     "babel-loader": "8.0.0-beta.4",
     "babel-preset-react-app": "^4.0.0-next.3e165448",
+    "chalk": "^1.1.3",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
-    "style-loader": "^0.21.0",
+    "globby": "^4.1.0",
+    "html-webpack-plugin": "^4.0.0-alpha",
+    "mini-css-extract-plugin": "^0.4.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
-    "postcss-nested": "^3.0.0"
+    "postcss-nested": "^3.0.0",
+    "react-dev-utils": "^5.0.1",
+    "react-hot-loader": "^4.3.3",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8"
   },
   "publishConfig": {
     "access": "public"
