--- a/packages/plugin-type-component/package.json
+++ b/packages/plugin-type-component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnc/plugin-type-component",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "🔍 component configuration",
   "license": "MIT",
   "main": "lib/index.js",
@@ -13,29 +13,29 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
-    "@rnc/plugin-core": "^0.0.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "html-webpack-plugin": "^4.0.0-alpha",
-    "mini-css-extract-plugin": "^0.4.1",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8",
-    "chalk": "^1.1.3",
-    "globby": "^4.1.0",
-    "react-dev-utils": "^5.0.1",
-    "rollup-plugin-babel": "^4.0.0-beta.8",
-    "react-hot-loader": "^4.3.3",
-    "babel-loader": "8.0.0-beta.4",
-    "@babel/preset-env": "^7.0.0-beta.56",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.56",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
+    "@babel/preset-env": "^7.0.0-beta.56",
+    "@babel/runtime": "^7.0.0-beta.56",
+    "@rnc/plugin-core": "^0.0.1",
+    "babel-loader": "8.0.0-beta.4",
+    "chalk": "^1.1.3",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
-    "style-loader": "^0.21.0",
+    "globby": "^4.1.0",
+    "html-webpack-plugin": "^4.0.0-alpha",
+    "mini-css-extract-plugin": "^0.4.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
-    "postcss-nested": "^3.0.0"
+    "postcss-nested": "^3.0.0",
+    "react-dev-utils": "^5.0.1",
+    "react-hot-loader": "^4.3.3",
+    "rollup-plugin-babel": "^4.0.0-beta.8",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8"
   },
   "publishConfig": {
     "access": "public"
