--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnc/shell",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "execute the bash command",
   "license": "MIT",
   "main": "lib/index.js",
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
-    "@rnc/plugin-core": "^0.0.0",
-    "shelljs": "^0.8.2",
-    "chalk": "^1.1.3"
+    "@rnc/plugin-core": "^0.0.1",
+    "chalk": "^1.1.3",
+    "shelljs": "^0.8.2"
   },
   "publishConfig": {
     "access": "public"
