--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnc/utils",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "🔍 common functions",
   "license": "MIT",
   "main": "lib/index.js",
@@ -13,10 +13,10 @@
     "node": ">=6"
   },
   "dependencies": {
-    "inquirer": "^3.0.6",
+    "@babel/runtime": "^7.0.0-beta.56",
     "chalk": "^1.1.3",
     "fallback-port": "^0.1.7",
-    "@babel/runtime": "^7.0.0-beta.56"
+    "inquirer": "^3.0.6"
   },
   "publishConfig": {
     "access": "public"
