--- a/packages/plugin-oss-upload/package.json
+++ b/packages/plugin-oss-upload/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rnc/plugin-oss",
+  "name": "@rnc/plugin-oss-upload",
   "version": "0.0.0",
   "description": "upload assets to oss",
   "license": "MIT",
