--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "author": "rainie",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
     "@babel/cli": "^7.0.0-beta.56",
     "@babel/core": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.56",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.56",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
+    "@babel/preset-env": "^7.0.0-beta.56",
+    "babel-eslint": "^7.2.3",
     "eslint": "^3.8.1",
+    "eslint-config-cqaso-kit": "0.0.1",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.0.1",
