--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,6 +25,7 @@
     "@rnc/plugin-select": "^0.0.5",
     "@rnc/plugin-sequence": "^0.0.5",
     "@rnc/plugin-type-app": "^0.0.5",
+    "@rnc/plugin-oss-upload": "^0.0.0",
     "@rnc/plugin-type-component": "^0.0.5",
     "@rnc/shell": "^0.0.5",
     "@rnc/spinner": "^0.0.4",
