--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,9 @@
     "@rnc/plugin-env": "^0.0.5",
     "@rnc/plugin-find": "^0.0.5",
     "@rnc/plugin-npm": "^0.0.5",
+    "@rnc/plugin-git": "^0.0.0",
+    "@rnc/git": "^0.0.0",
+    "@rnc/plugin-lint-staged": "^0.0.0",
     "@rnc/plugin-select": "^0.0.5",
     "@rnc/plugin-sequence": "^0.0.5",
     "@rnc/plugin-type-app": "^0.0.5",
