--- a/packages/cli/_template/app-webpack-react-kit/package.json
+++ b/packages/cli/_template/app-webpack-react-kit/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "description": "webpack开发的应用(内置)",
   "main": "",
+  "scripts": {
+    "lint": "npm run eslint && npm-ensure -t deps",
+    "test": "rnc test",
+    "precommit": "lint-staged",
+    "dev": "rnc dev home",
+    "build": "rnc build",
+    "eslint": "eslint 'src/**/*.@(js|jsx)' --fix"
+  },
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
@@ -14,8 +22,30 @@
     "eslint-plugin-flowtype": "^2.34.1",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "npm-ensure": "1.x",
+    "lint-staged": "7.x"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "lint-staged": {
+    "src/**/*.@(js|jsx)": [
+      "eslint --fix",
+      "npm-ensure -t deps",
+      "git add"
+    ]
+  },
+  "ensure": {
+    "deps": {
+      "checkDirs": [
+        "src/**/*"
+      ],
+      "ignores": [
+        "components",
+        "utils",
+        "widget",
+        "styles"
+      ]
+    }
+  }
 }
