--- a/packages/git/package.json
+++ b/packages/git/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@rnc/plugin-npm",
-  "version": "0.0.5",
-  "description": "🔍 npm command",
+  "name": "@rnc/git",
+  "version": "0.0.0",
+  "description": "git operation",
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
-    "@rnc/plugin-core": "^0.0.4",
-    "@rnc/npm": "^0.0.0",
+    "@rnc/utils": "^0.0.4",
     "@rnc/shell": "^0.0.5",
-    "@rnc/spinner": "^0.0.4"
+    "chalk": "^1.1.3",
+    "fs-extra": "^3.0.1"
   },
   "publishConfig": {
     "access": "public"
