--- a/packages/plugin-git/package.json
+++ b/packages/plugin-git/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@rnc/plugin-npm",
-  "version": "0.0.5",
-  "description": "🔍 npm command",
+  "name": "@rnc/plugin-git",
+  "version": "0.0.0",
+  "description": "🔍 git command",
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
@@ -15,9 +15,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
     "@rnc/plugin-core": "^0.0.4",
-    "@rnc/npm": "^0.0.0",
-    "@rnc/shell": "^0.0.5",
-    "@rnc/spinner": "^0.0.4"
+    "@rnc/git": "^0.0.0"
   },
   "publishConfig": {
     "access": "public"
