--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,7 +16,8 @@
     "@babel/runtime": "^7.0.0-beta.56",
     "chalk": "^1.1.3",
     "fallback-port": "^0.1.7",
-    "inquirer": "^3.0.6"
+    "inquirer": "^3.0.6",
+    "string-width": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
