--- a/packages/plugin-oss-upload/package.json
+++ b/packages/plugin-oss-upload/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnc/plugin-oss-upload",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "upload assets to oss",
   "license": "MIT",
   "main": "lib/index.js",
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
-    "@rnc/plugin-core": "^0.0.4",
-    "@rnc/oss": "^0.0.0"
+    "@rnc/oss": "^0.0.1",
+    "@rnc/plugin-core": "^0.0.4"
   },
   "publishConfig": {
     "access": "public"
