--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,7 @@
     "@rnc/shell": "^0.0.6",
     "@rnc/spinner": "^0.0.4",
     "@rnc/utils": "^0.0.5",
+    "@rnc/npm": "^0.0.1",
     "chalk": "^1.1.3",
     "commander": "^2.9.0"
   },
