--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
     "@rnc/shell": "^0.0.6",
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "urllib": "^2.29.1"
   },
   "publishConfig": {
     "access": "public"
