--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
     "chalk": "^1.1.3",
+    "download": "^7.1.0",
     "fallback-port": "^0.1.7",
     "inquirer": "^3.0.6",
     "string-width": "^2.0.0"
