✨  [feature] 初步完成component插件定制

--- a/packages/plugin-config-app/package.json
+++ b/packages/plugin-config-app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rnc/plugin-type-app",
-  "version": "0.0.6",
+  "name": "@rnc/plugin-config-app",
+  "version": "0.0.0",
   "description": "🔍 app configuration",
   "license": "MIT",
   "main": "lib/index.js",
