--- a/packages/widget-univeral-component/package.json
+++ b/packages/widget-univeral-component/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@rnc/widget-univeral-app",
-  "version": "0.0.2",
-  "description": "通用应用",
+  "name": "@rnc/widget-univeral-component",
+  "version": "0.0.0",
+  "description": "通用组件",
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.56",
     "@rnc/git": "^0.0.2",
+    "@rnc/plugin-compiler-rollup": "^0.0.5",
     "@rnc/plugin-compiler-webpack": "^0.0.5",
     "@rnc/plugin-env": "^0.0.5",
     "@rnc/plugin-find": "^0.0.6",
@@ -23,6 +24,7 @@
     "@rnc/plugin-oss-upload": "^0.0.2",
     "@rnc/plugin-sequence": "^0.0.5",
     "@rnc/plugin-config-app": "^0.0.0",
+    "@rnc/plugin-config-component": "^0.0.0",
     "@rnc/shell": "^0.0.7",
     "@rnc/spinner": "^0.0.4",
     "chalk": "^1.1.3"
