--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,7 @@
     "@rnc/plugin-npm": "^0.0.7",
     "@rnc/plugin-select": "^0.0.7",
     "@rnc/plugin-sequence": "^0.0.5",
+    "@rnc/widget-univeral-component": "^0.0.2",
     "@rnc/shell": "^0.0.7",
     "@rnc/spinner": "^0.0.4",
     "@rnc/utils": "^0.0.6",
