--- a/packages/plugin-config-component/package.json
+++ b/packages/plugin-config-component/package.json
@@ -13,6 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.56",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.56",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
