✨  [feature] 第四版:增加命令配置，可扩展

--- a/packages/widget-univeral-app/package.json
+++ b/packages/widget-univeral-app/package.json
@@ -29,5 +29,32 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "rnc": {
+    "commands": [{
+      "name": "dev",
+      "desc": "本地开发",
+      "arguments": "[pagePath...]",
+      "options": [],
+      "action": "./lib/develop.js"
+    }, {
+      "name": "build",
+      "desc": "本地打包",
+      "arguments": "[pagePath...]",
+      "options": [],
+      "action": "./lib/build.js"
+    }, {
+      "name": "publish",
+      "desc": "发布",
+      "arguments": "[pagePath...]",
+      "options": [],
+      "action": "./lib/publish.js"
+    }, {
+      "name": "upload",
+      "desc": "上传",
+      "arguments": "[pagePath...]",
+      "options": [],
+      "action": "./lib/upload.js"
+    }]
   }
 }
