--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "@rnc/npm": "^0.0.2",
     "@rnc/plugin-copy": "^0.0.8",
     "@rnc/plugin-find": "^0.0.7",
