--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "lerna run --parallel --stream build",
     "link": "lerna exec --scope @rnc/cli -- npm link",
     "bootstrap": "lerna bootstrap --hoist",
-    "publish": "lerna publish"
+    "publish": "lerna publish",
+    "clean": "lerna clean"
   },
   "keywords": [
     "analyze",
@@ -19,12 +20,12 @@
   "author": "rainie",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.56",
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.56",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
+    "@babel/cli": "7.1.0",
+    "@babel/core": "7.1.0",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/preset-env": "7.1.0",
     "babel-eslint": "^7.2.3",
     "eslint": "^3.8.1",
     "eslint-config-cqaso-kit": "0.0.1",
