--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "@rnc/shell": "^0.0.7",
     "chalk": "^1.1.3",
     "urllib": "^2.29.1"
