--- a/packages/oss/package.json
+++ b/packages/oss/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "@rnc/utils": "^0.0.7",
     "ali-oss": "^6.0.1",
     "uuid": "^3.3.2"
