--- a/packages/plugin-compiler-rollup/package.json
+++ b/packages/plugin-compiler-rollup/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "@rnc/plugin-core": "^0.0.4",
     "chalk": "^1.1.3",
     "rollup": "^0.64.0",
