--- a/packages/plugin-config-app/package.json
+++ b/packages/plugin-config-app/package.json
@@ -13,8 +13,8 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/core": "7.1.0",
+    "@babel/runtime": "7.0.0",
     "@rnc/plugin-core": "^0.0.4",
     "babel-loader": "8.0.0-beta.4",
     "babel-preset-react-app": "^4.0.0-next.3e165448",
@@ -24,7 +24,7 @@
     "globby": "^4.1.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.4.1",
-    "postcss-cssnext": "^3.1.0",
+    "postcss-cssnext": "3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0",
