--- a/packages/plugin-config-component/package.json
+++ b/packages/plugin-config-component/package.json
@@ -13,12 +13,13 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.56",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/core": "7.1.0",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-decorators": "7.1.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/runtime": "7.0.0",
     "@rnc/plugin-core": "^0.0.4",
     "babel-loader": "8.0.0-beta.4",
     "chalk": "^1.1.3",
@@ -27,7 +28,7 @@
     "globby": "^4.1.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.4.1",
-    "postcss-cssnext": "^3.1.0",
+    "postcss-cssnext": "3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0",
