--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -12,7 +12,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56"
+    "@babel/runtime": "7.0.0"
   },
   "publishConfig": {
     "access": "public"
