--- a/packages/plugin-find/package.json
+++ b/packages/plugin-find/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "@rnc/plugin-core": "^0.0.4",
     "globby": "^8.0.1",
     "path-type": "^3.0.0"
