--- a/packages/plugin-git/package.json
+++ b/packages/plugin-git/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "@rnc/git": "^0.0.3",
     "@rnc/plugin-core": "^0.0.4"
   },
