--- a/packages/plugin-npm/package.json
+++ b/packages/plugin-npm/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "@rnc/npm": "^0.0.2",
     "@rnc/plugin-core": "^0.0.4",
     "@rnc/shell": "^0.0.7"
