--- a/packages/plugin-select/package.json
+++ b/packages/plugin-select/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "@rnc/plugin-core": "^0.0.4",
     "@rnc/utils": "^0.0.7",
     "fs-extra": "^3.0.1"
