--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "7.0.0",
     "chalk": "^1.1.3",
     "download": "^7.1.0",
     "fallback-port": "^0.1.7",
