--- a/packages/plugin-config-rainie-toolbox-app/package.json
+++ b/packages/plugin-config-rainie-toolbox-app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@rnc/plugin-config-app",
-  "version": "0.0.2",
-  "description": "🔍 app configuration",
+  "name": "@rnc/plugin-config-rainie-toolbox-app",
+  "version": "0.0.0",
+  "description": "🔍 rainie-toolbox app configuration",
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "globby": "^4.1.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.4.1",
@@ -31,8 +32,10 @@
     "postcss-nested": "^3.0.0",
     "react-dev-utils": "^5.0.1",
     "react-hot-loader": "^4.3.3",
+    "react-rainie-toolbox": "^1.0.7",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.1.1",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8"
   },
