--- a/packages/plugin-compiler-webpack/package.json
+++ b/packages/plugin-compiler-webpack/package.json
@@ -16,6 +16,7 @@
     "@babel/runtime": "7.0.0",
     "@rnc/plugin-core": "^0.0.4",
     "@rnc/spinner": "^0.0.4",
+    "@rnc/utils": "^0.0.7",
     "chalk": "^1.1.3",
     "react-dev-utils": "^5.0.1",
     "webpack": "^4.15.1",
