--- a/packages/plugin-config-rainie-toolbox-app/package.json
+++ b/packages/plugin-config-rainie-toolbox-app/package.json
@@ -18,6 +18,7 @@
     "@rnc/plugin-core": "^0.0.4",
     "babel-loader": "8.0.0-beta.4",
     "babel-preset-react-app": "^4.0.0-next.3e165448",
+    "babel-plugin-element-wrapper": "^0.1.2",
     "@babel/plugin-proposal-decorators": "7.1.0",
     "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.19",
