--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@babel/runtime": "7.0.0",
     "@rnc/shell": "^0.0.8",
-    "chalk": "^1.1.3",
-    "urllib": "^2.29.1"
+    "axios": "^0.18.0",
+    "chalk": "^2.4.1"
   },
   "publishConfig": {
     "access": "public"
