--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnc/logger",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "logger",
   "license": "MIT",
   "main": "lib/index.js",
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "@babel/runtime": "7.0.0",
-    "log-symbols": "^2.2.0",
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "log-symbols": "^2.2.0"
   },
   "publishConfig": {
     "access": "public"
