--- a/packages/plugin-compiler-webpack/package.json
+++ b/packages/plugin-compiler-webpack/package.json
@@ -21,8 +21,7 @@
     "react-dev-utils": "^5.0.1",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3"
+    "webpack-dev-server": "^3.1.4"
   },
   "publishConfig": {
     "access": "public"
