--- a/packages/plugin-config-app/package.json
+++ b/packages/plugin-config-app/package.json
@@ -16,25 +16,25 @@
     "@babel/core": "7.1.0",
     "@babel/plugin-proposal-decorators": "7.1.0",
     "@babel/runtime": "7.0.0",
+    "@rnc/builder-helper": "^0.0.0",
     "@rnc/plugin-core": "^0.0.5",
     "babel-loader": "8.0.0-beta.4",
     "babel-preset-react-app": "^4.0.0-next.3e165448",
     "chalk": "^2.4.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
-    "globby": "^4.1.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.4.1",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0",
-    "react-dev-utils": "^5.0.1",
+    "webpack-merge": "^4.1.3",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "react-hot-loader": "^4.3.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8"
+    "webpack": "^4.15.1"
   },
   "publishConfig": {
     "access": "public"
