--- a/packages/widget-univeral-app/package.json
+++ b/packages/widget-univeral-app/package.json
@@ -18,13 +18,12 @@
     "@rnc/logger": "^0.0.3",
     "@rnc/plugin-compiler-webpack": "^0.0.12",
     "@rnc/plugin-config-app": "^0.0.6",
-    "@rnc/plugin-env": "^0.0.8",
     "@rnc/plugin-find": "^0.0.8",
     "@rnc/plugin-git": "^0.0.19",
-    "@rnc/plugin-npm": "^0.0.21",
     "@rnc/plugin-oss-upload": "^0.0.11",
     "@rnc/plugin-sequence": "^0.0.6",
     "@rnc/shell": "^0.0.21",
+    "@rnc/builder-helper": "^0.0.0",
     "chalk": "^2.4.1"
   },
   "publishConfig": {
