--- a/packages/plugin-compiler-webpack/package.json
+++ b/packages/plugin-compiler-webpack/package.json
@@ -18,6 +18,7 @@
     "@rnc/spinner": "^0.0.5",
     "@rnc/utils": "^0.0.13",
     "chalk": "^2.4.1",
+    "nunjucks": "^3.1.4",
     "react-dev-utils": "^5.0.1",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
