--- a/packages/plugin-compiler-webpack-server/package.json
+++ b/packages/plugin-compiler-webpack-server/package.json
@@ -17,7 +17,7 @@
     "@rnc/plugin-core": "^0.0.5",
     "nodemon": "^1.18.5",
     "ramda": "^0.25.0",
-    "webpack": "^4.15.1",
+    "webpack": "4.29.6",
     "webpack-cli": "^3.0.8",
     "webpack-merge": "^4.1.3"
   },
