--- a/packages/plugin-config-app/package.json
+++ b/packages/plugin-config-app/package.json
@@ -30,12 +30,12 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0",
-    "webpack-merge": "^4.1.3",
     "progress-bar-webpack-plugin": "^1.11.0",
-    "react-hot-loader": "^4.3.3",
+    "react-hot-loader": "^4.7.1",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.15.1"
+    "webpack": "4.29.6",
+    "webpack-merge": "^4.1.3"
   },
   "publishConfig": {
     "access": "public"
