--- a/packages/plugin-config-component/package.json
+++ b/packages/plugin-config-component/package.json
@@ -32,10 +32,10 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0",
-    "react-dev-utils": "^5.0.1",
+    "react-dev-utils": "^8.0.0",
     "rollup-plugin-babel": "^4.0.0-beta.8",
     "style-loader": "^0.21.0",
-    "webpack": "^4.15.1",
+    "webpack": "4.29.6",
     "webpack-cli": "^3.0.8"
   },
   "publishConfig": {
