--- a/packages/plugin-config-node-server/package.json
+++ b/packages/plugin-config-node-server/package.json
@@ -23,7 +23,7 @@
     "babel-loader": "8.0.0-beta.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "source-map-support": "^0.5.9",
-    "webpack": "^4.15.1",
+    "webpack": "4.29.6",
     "webpack-cli": "^3.0.8",
     "webpack-node-externals": "^1.7.2"
   },
