--- a/packages/plugin-config-rainie-toolbox-app/package.json
+++ b/packages/plugin-config-rainie-toolbox-app/package.json
@@ -31,12 +31,12 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0",
-    "react-dev-utils": "^5.0.1",
-    "react-hot-loader": "^4.3.3",
+    "react-dev-utils": "^8.0.0",
+    "react-hot-loader": "^4.7.1",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.1.1",
-    "webpack": "^4.15.1",
+    "webpack": "4.29.6",
     "webpack-cli": "^3.0.8"
   },
   "publishConfig": {
