--- a/packages/plugin-config-app/package.json
+++ b/packages/plugin-config-app/package.json
@@ -35,7 +35,8 @@
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "4.29.6",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "worker-plugin": "^3.2.0"
   },
   "publishConfig": {
     "access": "public"
